--- a/app/views/owners/new.erb
+++ b/app/views/owners/new.erb
@@ -1,11 +1,12 @@
-<h1>Create a new Owner</h1>
+<h1>Create a New Owner</h1>
 
 <form action="/owners" method="POST">
   <label>Owner Name:</label>
+  <input type="text" name="owner[name]">
 
   <br>
+  <p>Select an existing pet or create a new one below.</p>
 
-  <input type="text" name="owner[name]">
 
   <h3>Existing Pets</h3>
   <% @pets.each do |pet| %>
@@ -15,7 +16,6 @@
 
   <h3>New Pet</h3>
   <label>Pet Name: </label>
-  <br>
   <input type="text" name="pet[name]" id="pet_name"></input>
   <br><br>
 
